@@ -1,3 +1,9 @@
+2023-08-24T20:08:16Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5968405879 # 3706
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-08-24
+* notice: query file size: 26207
+* notice: accum prev / next / diff: re vi: 0 2771 / 0 2772 / +0 +1
+
 2023-08-24T12:15:14Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5963543657 # 3704
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-08-24
